--- a/index.html
+++ b/index.html
@@ -3,17 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crypto Signal Service</title>
+    <title>TradeMasterVip</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Crypto Signal Service</h1>
-    </header>
-    <main>
-        <section id="pnl-report">
-            <h2>PNL Report</h2>
-            <table id="pnl-table">
+    <div class="container">
+        <h1>TradeMasterVip</h1>
+        <h2>PNL Report</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Profit/Loss</th>
+                </tr>
+            </thead>
+            <tbody id="pnl-table">
+                <tr>
+                    <td>2024-07-01</td>
+                    <td>+5%</td>
+                </tr>
+                <tr>
+                    <td>2024-07-02</td>
+                    <td>-2%</td>
+                </tr>
+                <tr>
+                    <td>2024-07-03</td>
+                    <td>+1.5%</td>
+                </tr>
+            </tbody>
+        </table>
+        <div id="overall-pnl"></div>
+        <a href="#" id="last-month-link">Show Last Month's PNL</a>
+        <div id="last-month-pnl" style="display: none;">
+            <h2>Last Month's PNL</h2>
+            <table>
                 <thead>
                     <tr>
                         <th>Date</th>
@@ -21,17 +44,28 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- PNL Data will be inserted here -->
+                    <tr>
+                        <td>2024-06-01</td>
+                        <td>+3%</td>
+                    </tr>
+                    <tr>
+                        <td>2024-06-02</td>
+                        <td>-1%</td>
+                    </tr>
+                    <tr>
+                        <td>2024-06-03</td>
+                        <td>+4%</td>
+                    </tr>
                 </tbody>
             </table>
-        </section>
-        <section id="running-signals">
-            <h2>Running Signals</h2>
-            <ul id="signals-list">
-                <!-- Signals will be inserted here -->
-            </ul>
-        </section>
-    </main>
+        </div>
+        <h2>Running Signals</h2>
+        <ul>
+            <li>12:00: Buy BTC</li>
+            <li>12:30: Sell ETH</li>
+            <li>13:00: Buy LTC</li>
+        </ul>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
