--- a/index.html
+++ b/index.html
@@ -7,35 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>TradeMasterVip</h1>
-        <h2>PNL Report</h2>
-        <table>
-            <thead>
-                <tr>
-                    <th>Date</th>
-                    <th>Profit/Loss</th>
-                </tr>
-            </thead>
-            <tbody id="pnl-table">
-                <tr>
-                    <td>2024-07-01</td>
-                    <td>+5%</td>
-                </tr>
-                <tr>
-                    <td>2024-07-02</td>
-                    <td>-2%</td>
-                </tr>
-                <tr>
-                    <td>2024-07-03</td>
-                    <td>+1.5%</td>
-                </tr>
-            </tbody>
-        </table>
-        <div id="overall-pnl"></div>
-        <a href="#" id="last-month-link">Show Last Month's PNL</a>
-        <div id="last-month-pnl" style="display: none;">
-            <h2>Last Month's PNL</h2>
+    <header>
+        <h1 class="brand-name">TradeMasterVip</h1>
+    </header>
+    <main>
+        <section class="report">
+            <h2>PNL Report</h2>
             <table>
                 <thead>
                     <tr>
@@ -45,27 +22,29 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>2024-06-01</td>
-                        <td>+3%</td>
+                        <td>2024-07-01</td>
+                        <td>+5%</td>
                     </tr>
                     <tr>
-                        <td>2024-06-02</td>
-                        <td>-1%</td>
+                        <td>2024-07-02</td>
+                        <td>-2%</td>
                     </tr>
                     <tr>
-                        <td>2024-06-03</td>
-                        <td>+4%</td>
+                        <td>2024-07-03</td>
+                        <td>+1.5%</td>
                     </tr>
                 </tbody>
             </table>
-        </div>
-        <h2>Running Signals</h2>
-        <ul>
-            <li>12:00: Buy BTC</li>
-            <li>12:30: Sell ETH</li>
-            <li>13:00: Buy LTC</li>
-        </ul>
-    </div>
-    <script src="script.js"></script>
+            <p><a href="#">Show Last Month's PNL</a></p>
+        </section>
+        <section class="signals">
+            <h2>Running Signals</h2>
+            <ul>
+                <li>12:00: Buy BTC</li>
+                <li>12:30: Sell ETH</li>
+                <li>13:00: Buy LTC</li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
