--- a/index.html
+++ b/index.html
@@ -11,40 +11,37 @@
         <h1 class="brand-name">TradeMasterVip</h1>
     </header>
     <main>
-        <section class="report">
-            <h2>PNL Report</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Date</th>
-                        <th>Profit/Loss</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>2024-07-01</td>
-                        <td>+5%</td>
-                    </tr>
-                    <tr>
-                        <td>2024-07-02</td>
-                        <td>-2%</td>
-                    </tr>
-                    <tr>
-                        <td>2024-07-03</td>
-                        <td>+1.5%</td>
-                    </tr>
-                </tbody>
-            </table>
-            <p><a href="#">Show Last Month's PNL</a></p>
-        </section>
-        <section class="signals">
-            <h2>Running Signals</h2>
-            <ul>
-                <li>12:00: Buy BTC</li>
-                <li>12:30: Sell ETH</li>
-                <li>13:00: Buy LTC</li>
-            </ul>
-        </section>
+        <h2>PNL Report</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>Profit/Loss</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2024-07-01</td>
+                    <td>+5%</td>
+                </tr>
+                <tr>
+                    <td>2024-07-02</td>
+                    <td>-2%</td>
+                </tr>
+                <tr>
+                    <td>2024-07-03</td>
+                    <td>+1.5%</td>
+                </tr>
+            </tbody>
+        </table>
+        <p>Overall PNL: 4.5%</p>
+        <a href="#">Show Last Month's PNL</a>
+        <h2>Running Signals</h2>
+        <ul>
+            <li><button class="signal-button">12:00: Buy BTC</button></li>
+            <li><button class="signal-button">12:30: Sell ETH</button></li>
+            <li><button class="signal-button">13:00: Buy LTC</button></li>
+        </ul>
     </main>
 </body>
 </html>
