Updated site with new title, PNL display, and improved styling

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
             </tbody>
         </table>
         <p>Overall PNL: 4.5%</p>
-        <a href="#">Show Last Month's PNL</a>
+        <a href="#" id="show-pnl-link">Show Last Month's PNL</a>
+        <div id="pnl-image-container" class="hidden">
+            <img src="overall_pnl_report_updated.png" alt="Overall PnL Report">
+        </div>
         <h2>Running Signals</h2>
         <ul>
             <li><button class="signal-button">12:00: Buy BTC</button></li>
@@ -43,5 +46,6 @@
             <li><button class="signal-button">13:00: Buy LTC</button></li>
         </ul>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
