Updated site with new title, PNL display, and improved styling

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 </tr>
             </tbody>
         </table>
-        <p>Overall PNL: 4.5%</p>
-        <a href="#" id="show-pnl-link">Show Last Month's PNL</a>
-        <div id="pnl-image-container" class="hidden">
-            <img src="overall_pnl_report_updated.png" alt="Overall PnL Report">
+        <p id="overall-pnl">Overall PNL: </p>
+        <a href="#" id="last-month-link">Show Last Month's PNL</a>
+        <div id="last-month-pnl" style="display:none;">
+            <img src="overall_pnl_report_updated.png" alt="Overall PNL Report">
         </div>
         <h2>Running Signals</h2>
         <ul>
@@ -46,6 +46,6 @@
             <li><button class="signal-button">13:00: Buy LTC</button></li>
         </ul>
     </main>
-    <script src="script.js"></script>
+    <script src="scripts.js"></script>
 </body>
 </html>
