--- a/index.html
+++ b/index.html
@@ -16,21 +16,59 @@
             <thead>
                 <tr>
                     <th>Date</th>
+                    <th>Coin</th>
+                    <th>Leverage</th>
                     <th>Profit/Loss</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
-                    <td>2024-07-01</td>
-                    <td>+5%</td>
+                    <td>2024/07/10</td>
+                    <td>BTCUSDT</td>
+                    <td>20x</td>
+                    <td>Profit 14%</td>
                 </tr>
                 <tr>
-                    <td>2024-07-02</td>
-                    <td>-2%</td>
+                    <td>2024/07/10</td>
+                    <td>WLDUSDT</td>
+                    <td>50x</td>
+                    <td>Loss 20%</td>
                 </tr>
                 <tr>
-                    <td>2024-07-03</td>
-                    <td>+1.5%</td>
+                    <td>2024/07/10</td>
+                    <td>WLDUSDT</td>
+                    <td>50x</td>
+                    <td>Profit 60%</td>
+                </tr>
+                <tr>
+                    <td>2024/07/11</td>
+                    <td>BOMEUSDT</td>
+                    <td>30x</td>
+                    <td>Profit 2%</td>
+                </tr>
+                <tr>
+                    <td>2024/07/11</td>
+                    <td>BOMEUSDT</td>
+                    <td>20x</td>
+                    <td>Profit 35%</td>
+                </tr>
+                <tr>
+                    <td>2024/07/11</td>
+                    <td>BTCUSDT</td>
+                    <td>25x</td>
+                    <td>Profit 4%</td>
+                </tr>
+                <tr>
+                    <td>2024/07/11</td>
+                    <td>BOMEUSDT</td>
+                    <td>20x</td>
+                    <td>Profit 131%</td>
+                </tr>
+                <tr>
+                    <td>2024/07/12</td>
+                    <td>XRPUSDT</td>
+                    <td>15x</td>
+                    <td>Loss 50%</td>
                 </tr>
             </tbody>
         </table>
@@ -41,9 +79,8 @@
         </div>
         <h2>Running Signals</h2>
         <ul>
-            <li><button class="signal-button">12:00: Buy BTC</button></li>
-            <li><button class="signal-button">12:30: Sell ETH</button></li>
-            <li><button class="signal-button">13:00: Buy LTC</button></li>
+            <li><button class="signal-button">BTCUSDT 45x Profit - Trade Running</button></li>
+            <li><button class="signal-button">BOMEUSDT 20x Profit - Trade Running</button></li>
         </ul>
     </main>
     <script src="scripts.js"></script>
