Updated site with new title, PNL display, and improved styling

--- a/index.html
+++ b/index.html
@@ -26,49 +26,49 @@
                     <td>2024/07/10</td>
                     <td>BTCUSDT</td>
                     <td>20x</td>
-                    <td>Profit 14%</td>
+                    <td>+14%</td>
                 </tr>
                 <tr>
                     <td>2024/07/10</td>
                     <td>WLDUSDT</td>
                     <td>50x</td>
-                    <td>Loss 20%</td>
+                    <td>-20%</td>
                 </tr>
                 <tr>
                     <td>2024/07/10</td>
                     <td>WLDUSDT</td>
                     <td>50x</td>
-                    <td>Profit 60%</td>
+                    <td>+60%</td>
                 </tr>
                 <tr>
                     <td>2024/07/11</td>
                     <td>BOMEUSDT</td>
                     <td>30x</td>
-                    <td>Profit 2%</td>
+                    <td>+2%</td>
                 </tr>
                 <tr>
                     <td>2024/07/11</td>
                     <td>BOMEUSDT</td>
                     <td>20x</td>
-                    <td>Profit 35%</td>
+                    <td>+35%</td>
                 </tr>
                 <tr>
                     <td>2024/07/11</td>
                     <td>BTCUSDT</td>
                     <td>25x</td>
-                    <td>Profit 4%</td>
+                    <td>+4%</td>
                 </tr>
                 <tr>
                     <td>2024/07/11</td>
                     <td>BOMEUSDT</td>
                     <td>20x</td>
-                    <td>Profit 131%</td>
+                    <td>+131%</td>
                 </tr>
                 <tr>
                     <td>2024/07/12</td>
                     <td>XRPUSDT</td>
                     <td>15x</td>
-                    <td>Loss 50%</td>
+                    <td>-50%</td>
                 </tr>
             </tbody>
         </table>
@@ -79,8 +79,8 @@
         </div>
         <h2>Running Signals</h2>
         <ul>
-            <li><button class="signal-button">BTCUSDT 45x Profit - Trade Running</button></li>
-            <li><button class="signal-button">BOMEUSDT 20x Profit - Trade Running</button></li>
+            <li><button class="signal-button">BTCUSDT Trade Running</button></li>
+            <li><button class="signal-button">BOMEUSDT Trade Running</button></li>
         </ul>
     </main>
     <script src="scripts.js"></script>
