--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <p id="overall-pnl">Overall PNL: </p>
         <a href="#" id="last-month-link">Show Last Month's PNL</a>
         <div id="last-month-pnl" style="display:none;">
-            <img src="overall_pnl_report_updated.png" alt="Overall PNL Report">
+            <img id="pnl-image" src="overall_pnl_report_updated.png" alt="Overall PNL Report">
         </div>
         <h2>Running Signals</h2>
         <ul>
