--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </table>
         <p id="overall-pnl">Overall PNL: </p>
         <a href="#" id="last-month-link">Show Last Month's PNL</a>
-        <div id="last-month-pnl" style="display:none;">
+        <div id="last-month-pnl" style="display:C:\Users\Infonet Computers\Desktop\crypto-signal-service;">
             <img id="pnl-image" src="overall_pnl_report_updated.png" alt="Overall PNL Report">
         </div>
         <h2>Running Signals</h2>
