--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
                 </tr>
             </tbody>
         </table>
-        <p id="overall-pnl">Overall PNL: </p>
+        <p id="overall-pnl">Overall PNL: <span id="pnl-value"></span></p>
         <a href="#" id="last-month-link">Show Last Month's PNL</a>
-        <div id="last-month-pnl" style="display:C:\Users\Infonet Computers\Desktop\crypto-signal-service;">
+        <div id="last-month-pnl" style="display:none;">
+            <a href="#" id="back-to-home">Back to Homepage</a>
             <img id="pnl-image" src="overall_pnl_report_updated.png" alt="Overall PNL Report">
         </div>
         <h2>Running Signals</h2>
@@ -82,6 +83,7 @@
             <li><button class="signal-button">BTCUSDT Trade Running</button></li>
             <li><button class="signal-button">BOMEUSDT Trade Running</button></li>
         </ul>
+        <button id="join-vip-group">Join Our VIP Group</button>
     </main>
     <script src="scripts.js"></script>
 </body>
