--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </table>
         <p id="overall-pnl">Overall PNL: <span id="pnl-value"></span></p>
         <a href="#" id="last-month-link">Show Last Month's PNL</a>
-        <div id="last-month-pnl" style="display:C:\Users\Infonet Computers\Desktop\crypto-signal-service;">
+        <div id="last-month-pnl" style="display:none;">
             <a href="#" id="back-to-home">Back to Homepage</a>
             <img id="pnl-image" src="overall_pnl_report_updated.png" alt="Overall PNL Report">
         </div>
@@ -83,7 +83,7 @@
             <li><button class="signal-button">BTCUSDT Trade Running</button></li>
             <li><button class="signal-button">BOMEUSDT Trade Running</button></li>
         </ul>
-        <button id="https://t.me/TradeMasterTradingHelp">Join Our VIP Group</button>
+        <button id="Join Our VIP Group">Join Our VIP Group</button>
     </main>
     <script src="scripts.js"></script>
 </body>
