--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </tbody>
         </table>
         <p id="overall-pnl">Overall PNL: <span id="pnl-value"></span></p>
-        <a href="#" id="last-month-link">Show Last Month's PNL</a>
+        <a href="#" id="C:\Users\Infonet Computers\Desktop\crypto-signal-service">Show Last Month's PNL</a>
         <div id="last-month-pnl" style="display:none;">
             <a href="#" id="back-to-home">Back to Homepage</a>
             <img id="pnl-image" src="overall_pnl_report_updated.png" alt="Overall PNL Report">
