--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a href="#" id="C:\Users\Infonet Computers\Desktop\crypto-signal-service">Show Last Month's PNL</a>
         <div id="last-month-pnl" style="display:none;">
             <a href="#" id="back-to-home">Back to Homepage</a>
-            <img id="pnl-image" src="overall_pnl_report_updated.png" alt="Overall PNL Report">
+            <img id="pnl-image" src="C:\Users\Infonet Computers\Desktop\crypto-signal-service" alt="Overall PNL Report">
         </div>
         <h2>Running Signals</h2>
         <ul>
