--- a/index.html
+++ b/index.html
@@ -73,17 +73,18 @@
             </tbody>
         </table>
         <p id="overall-pnl">Overall PNL: <span id="pnl-value"></span></p>
-        <a href="#" id="C:\Users\Infonet Computers\Desktop\crypto-signal-service">Show Last Month's PNL</a>
+        <a href="#" id="show-last-month">Show Last Month's PNL</a>
         <div id="last-month-pnl" style="display:none;">
             <a href="#" id="back-to-home">Back to Homepage</a>
-            <img id="pnl-image" src="C:\Users\Infonet Computers\Desktop\crypto-signal-service" alt="Overall PNL Report">
+            <!-- Update the src attribute with the correct path to your image -->
+            <img id="pnl-image" src="file:///C:/Users/Infonet%20Computers/Desktop/crypto-signal-service" alt="Overall PNL Report">
         </div>
         <h2>Running Signals</h2>
         <ul>
             <li><button class="signal-button">BTCUSDT Trade Running</button></li>
             <li><button class="signal-button">BOMEUSDT Trade Running</button></li>
         </ul>
-        <button id="Join Our VIP Group">Join Our VIP Group</button>
+        <button id="join-vip-group">Join Our VIP Group</button>
     </main>
     <script src="scripts.js"></script>
 </body>
