--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </tr>
             </tbody>
         </table>
-        <p id="overall-pnl">Overall PNL: <span id="pnl-value"></span></p>
+        <p id="overall-pnl">Overall PNL:style="color: red;"> 176 <span id="pnl-value"></span></p>
         <a href="#" id="show-last-month">Show Last Month's PNL</a>
         <div id="last-month-pnl" style="display:none;">
             <a href="#" id="back-to-home">Back to Homepage</a>
