--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </tbody>
         </table>
         <p id="overall-pnl">Overall PNL: <span id="pnl-value"></span></p>
-        <a href="#" id="show-last-month">Show Last Month's PNL</a>
+        <a href="#" id="show-last-month">176%</a>
         <div id="last-month-pnl" style="display:none;">
             <a href="#" id="back-to-home">Back to Homepage</a>
             <!-- Update the src attribute with the correct path to your image -->
