--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
         </table>
         <p id="overall-pnl">Overall PNL: <span id="pnl-value"></span></p>
         <a href="#" id="show-last-month">176%</a>
+        <p id="overall-pnl">Signals given days <span id="pnl-value"></span></p>
+        <a href="#" id="show-last-month">3 Days</a>
         <div id="last-month-pnl" style="display:none;">
             <a href="#" id="back-to-home">Back to Homepage</a>
             <!-- Update the src attribute with the correct path to your image -->
