--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </tbody>
         </table>
         <p id="overall-pnl">Overall PNL: <span id="pnl-value"></span></p>
-        <a href="#" id="show-last-month">176%</a>
+        <a href="#" id="14, -20, 60, 2, 35, 4, 131, -50">176%</a>
         <p id="overall-pnl">Signals given days <span id="pnl-value"></span></p>
         <a href="#" id="show-last-month">3 Days</a>
         <div id="last-month-pnl" style="display:none;">
