--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <li><button class="signal-button">BTCUSDT Trade Running</button></li>
             <li><button class="signal-button">BOMEUSDT Trade Running</button></li>
         </ul>
-        <button id="join-vip-group">Join Our VIP Group</button>
+        <button id="join-telegram-group" data url="https://t.me/TradeMasterCryptoSignals">Join Our telegram Group</button>
     </main>
     <script src="scripts.js"></script>
 </body>
