--- a/index.html
+++ b/index.html
@@ -86,8 +86,21 @@
             <li><button class="signal-button">BTCUSDT Trade Running</button></li>
             <li><button class="signal-button">BOMEUSDT Trade Running</button></li>
         </ul>
-        <button id="join-telegram-group" data url="https://t.me/TradeMasterCryptoSignals">Join Our telegram Group</button>
-    </main>
-    <script src="scripts.js"></script>
+         
+
+<button id="join-telegram-group" data-url="https://t.me/TradeMasterCryptoSignals">Join Our Telegram Group</button>
+
+<script>
+  // JavaScript code to handle button click and open URL
+  document.getElementById('join-telegram-group').addEventListener('click', function() {
+    // Retrieve the URL from the data-url attribute
+    var url = this.getAttribute('data-url');
+    
+    // Open the URL in a new tab/window
+    window.open(url, '_blank');
+  });
+</script>
+
 </body>
 </html>
+
