--- a/index.html
+++ b/index.html
@@ -70,12 +70,30 @@
                     <td>15x</td>
                     <td>-50%</td>
                 </tr>
+                <tr>
+                    <td>2024/07/13</td>
+                    <td>BTCUSDT</td>
+                    <td>45x</td>
+                    <td>-50%</td>
+                </tr>
+                <tr>
+                    <td>2024/07/13</td>
+                    <td>BTCUSDT</td>
+                    <td>50x</td>
+                    <td>-50%</td>
+                 </tr>
+                <tr>
+                    <td>2024/07/13</td>
+                    <td>BOMEUSDT</td>
+                    <td>20x</td>
+                    <td>-50%</td>
+                </tr>
             </tbody>
         </table>
         <p id="overall-pnl">Overall PNL: <span id="pnl-value"></span></p>
-        <a href="#" id="last-month-pnl">176%</a>
+        <a href="#" id="last-month-pnl">+26%</a>
         <p id="overall-pnl">Signals given days <span id="pnl-value"></span></p>
-        <a href="#" id="show-last-month">3 Days</a>
+        <a href="#" id="show-last-month">4 Days</a>
         <div id="last-month-pnl" style="display:none;">
             <a href="#" id="back-to-home">Back to Homepage</a>
             <!-- Update the src attribute with the correct path to your image -->
@@ -84,7 +102,7 @@
         <h2>Running Signals</h2>
         <ul>
             <li><button class="signal-button">BTCUSDT Trade Running</button></li>
-            <li><button class="signal-button">BOMEUSDT Trade Running</button></li>
+            <li><button class="signal-button">No running trades</button></li>
         </ul>
          
 
