--- a/index.html
+++ b/index.html
@@ -88,6 +88,78 @@
                     <td>20x</td>
                     <td>-50%</td>
                 </tr>
+                <tr>
+                    <td>2024/07/14</td>
+                    <td>BOMEUSDT</td>
+                    <td>18x</td>
+                    <td>+08%</td>
+                </tr>
+                    <tr>
+                    <td>2024/07/15</td>
+                    <td>BTCUSDT</td>
+                    <td>15x</td>
+                    <td>-50%</td>
+                </tr>
+                    <tr>
+                    <td>2024/07/18</td>
+                    <td>BTCUSDT</td>
+                    <td>30x</td>
+                    <td>+08%</td>
+                </tr>
+                    <tr>
+                    <td>2024/07/18</td>
+                    <td>BOMEUSDT</td>
+                    <td>20x</td>
+                    <td>+113%</td>
+                 </tr>
+                     <tr>
+                    <td>2024/07/19</td>
+                    <td>BOMEUSDT</td>
+                    <td>20x</td>
+                    <td>-55%</td>
+                </tr> 
+                    <tr>
+                    <td>2024/07/19</td>
+                    <td>BTCUSDT</td>
+                    <td>50x</td>
+                    <td>-50%</td>
+                </tr>
+                    <tr>
+                    <td>2024/07/20</td>
+                    <td>BTCUSDT</td>
+                    <td>100x</td>
+                    <td>-50%</td>
+                </tr>
+                    <tr>
+                    <td>2024/07/20</td>
+                    <td>CFXUSDT</td>
+                    <td>12x</td>
+                    <td>+59%</td>
+                </tr>
+                    <tr>
+                    <td>2024/07/20</td>
+                    <td>BTCUSDT</td>
+                    <td>100x</td>
+                    <td>+243%</td>
+                </tr>  
+                    <tr>
+                    <td>2024/07/21</td>
+                    <td>BTCUSDT</td>
+                    <td>30x</td>
+                    <td>-50%</td>
+                </tr>
+                    <tr>
+                    <td>2024/07/23</td>
+                    <td>BOMEUSDT</td>
+                    <td>20x</td>
+                    <td>+110%</td>
+                </tr>
+                    <tr>
+                    <td>2024/07/23</td>
+                    <td>BTCUSDT</td>
+                    <td>90x</td>
+                    <td>+281%</td>
+                </tr>
             </tbody>
         </table>
         <p id="overall-pnl">Overall PNL: <span id="pnl-value"></span></p>
