--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <h2>Running Signals</h2>
         <ul>
             <li><button class="signal-button">BTCUSDT Trade Running</button></li>
-            <li><button class="signal-button">No running trades</button></li>
+            <li><button class="signal-button">BOMEUSDT Trade Running</button></li>
         </ul>
          
 
