--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
          
 
 <button id="join-telegram-group" data-url="https://t.me/TradeMasterCryptoSignals">Join Our Telegram Group</button>
+        <button id="join-telegram-group" data-url="https://t.me/TradeMasterCryptoSignals">Join Our Free Signal Group</button>
+
 
 <script>
   // JavaScript code to handle button click and open URL
