--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
          
 <br>
 <br>
-<button id="join-telegram-group" class="button2" data-url="https://t.me/TradeMasterCryptoSignals">Join our free Analysis group</button><br>
-<button id="join-free-signal-group" class="button1" data-url="https://t.me/freecryptosignalsbytrademaster">Join Our Free Signal Group</button><br>
-<button id="join-vip-group" class="button3" data-url="https://wa.me/94760454700?text=I%20want%20join%20to%20vip%20group">Join Our VIP group</button><br>
+<button id="join-telegram-group" class="button2" data-url="https://t.me/TradeMasterCryptoSignals">Join our free Analysis group</button><br><br>
+<button id="join-free-signal-group" class="button1" data-url="https://t.me/freecryptosignalsbytrademaster">Join Our Free Signal Group</button><br><br>
+<button id="join-vip-group" class="button3" data-url="https://wa.me/94760454700?text=I%20want%20join%20to%20vip%20group">Join Our VIP group</button><br><br>
 
 
 <script>
