--- a/index.html
+++ b/index.html
@@ -174,11 +174,9 @@
         </div>
         <h2>Running Signals</h2>
         <ul>
-            <li><button class="signal-button">BTCUSDT Trade Running</button></li>
-            <li><button class="signal-button">BOMEUSDT Trade Running</button></li>
+            <li><button class="signal-button">No Running Signals</button></li>
         </ul>
          
-<br>
 <br>
 
 <center><p class="text2">Join Us.</p></center><br>
